// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM router it should fire an event for each class name 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Event {
        "isTrusted": false,
      },
    ],
    Array [
      Event {
        "isTrusted": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": "kjo apray",
    },
    Object {
      "type": "return",
      "value": "kjo apray",
    },
  ],
}
`;

exports[`DOM router it should use body classes when document is passed 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Event {
        "isTrusted": false,
      },
    ],
    Array [
      Event {
        "isTrusted": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": "kjo apray",
    },
    Object {
      "type": "return",
      "value": "kjo apray",
    },
  ],
}
`;

exports[`DOM router it should watch target for new classes 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Event {
        "isTrusted": false,
      },
    ],
    Array [
      Event {
        "isTrusted": false,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": "kjo apray",
    },
    Object {
      "type": "return",
      "value": "kjo swalk apray bdubs",
    },
  ],
}
`;
